# telegram-shadowsocks-manager-bot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  server.cc
src/: database.cc  database.h  database_impl.cc  database_impl.h  echobot.cc  manager.cc  manager.h  manager_impl.cc  manager_impl.h  server.cc  test_database.cc
